# chess

chess-cpp/: CMakeLists.txt
chess-cpp/libzork/: CMakeLists.txt
chess-cpp/libzork/include/libzork/runner/: html.hh  interactive.hh  network.hh  smart.hh
chess-cpp/libzork/include/libzork/store/: network-store.hh  store.hh
chess-cpp/libzork/include/libzork/story/: node.hh  story.hh
chess-cpp/libzork/include/libzork/variables/: action.hh  condition.hh
chess-cpp/libzork/src/: CMakeLists.txt  main.cc  node.cc
chess-cpp/src/: CMakeLists.txt  a.out  board.cc  board.hh  chess.code-workspace  main.cc  move.cc  move.hh  perft.cc  perft.hh  poubelle.cc  test.txt
